--- a/kled/2.html
+++ b/kled/2.html
@@ -12,5 +12,29 @@
   <a href=1.html>O nama</a>
   <a href=2.html>Usluge</a>
   <a href=3.html>Galerija</a></nav>
+  <div class="tablica">
+  <table>
+    <tr>
+      <th>Ime</th>
+      <th>Daljina</th>
+    </tr>
+    <tr>
+      <td>Sunce</td>
+      <td>150000000km</td>
+    </tr>
+    <tr>
+      <td>Mjesec</td>
+      <td>384000km</td>
+    </tr>
+        <tr>
+      <td>Sirius</td>
+      <td>8.6 ly.</td>
+    </tr>
+        <tr>
+      <td>Betelgeuse</td>
+      <td>550 ly.</td>
+    </tr>
+  </table>
+</div>
 </body>
 </html>
