--- a/kled/skaarl.html
+++ b/kled/skaarl.html
@@ -9,8 +9,8 @@
 <body>
    <nav>
   <a href=skaarl.html>Početna</a>
-  <a href=1.html>O nama</a>
-  <a href=2.html>Usluge</a>
+  <a href=1.html>To be continued</a>
+  <a href=2.html>Zanimljivosti</a>
   <a href=3.html>Galerija</a></nav>
     
   <h1 class="galaxy-text">
